# rag_pipeline

./: .gitignore  2_retrieval_pipeline.py  3_answer_generation.py  4_history_aware_generation.py  ingestion_pipeline.py  main.py  pyproject.toml  sam.py  sample.txt
docs/: Anthropic.txt  Google.txt  Meta.txt  Microsoft.txt  Nvidia.txt
